service.yaml
kind: Service
apiVersion: v1
metadata:
  name: review-summary
  namespace: mf-preprod
  labels:
    app: review-summary
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    name: review-summary
